--- a/posts/welcome/index.qmd
+++ b/posts/welcome/index.qmd
@@ -5,7 +5,7 @@ date: "2023-01-28"
 categories: [news]
 ---
 
-This is the first post in a Quarto blog. Welcome!
+This is the first post in a Quarto blog. Welcome - Benvenuti!
 
 ![](thumbnail.jpg)
 
